--- a/MvcCorePaginacionRegistros/Views/Shared/_Layout.cshtml
+++ b/MvcCorePaginacionRegistros/Views/Shared/_Layout.cshtml
@@ -30,10 +30,10 @@
                             Paginación
                         </button>
                         <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                            <a class="dropdown-item" 
-                               asp-controller="Departamentos" 
+                            <a class="dropdown-item"
+                               asp-controller="Departamentos"
                                asp-action="PaginarRegistroVistaDepartamento">
-                                Paginar Vista Departamento 
+                                Paginar Vista Departamento
                             </a>
                             <a class="dropdown-item"
                                asp-controller="Departamentos"
@@ -44,6 +44,11 @@
                                asp-controller="Departamentos"
                                asp-action="PaginarGrupoDepartamentos">
                                 Pag Gru.Departamento Procedimientos
+                            </a>
+                            <a class="dropdown-item"
+                               asp-controller="Departamentos"
+                               asp-action="PaginarGrupoEmpleadosOficio">
+                                Pag Gru.Empleados/Oficio Procedimientos
                             </a>
                         </div>
                     </div>
